data/derived/comb/progs/unify/prog0293.ml.out
Characters 134-135:
  in g
     ^
Error: This expression has type 'a -> ('a -> 'a * 'b) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a * 'b
